# fluctmatch

./: .cookiecutter.json  .coveragerc  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  labeler.yml  nox.yml  pre-commit.yml  pyright.yml  release.yml  tests.yml
docs/: Makefile  conf.py  index.md  index.rst  installation.rst  make.bat  reference.md  usage.md  usage.rst
docs/sphinxext/: docscrape.py  docscrape_sphinx.py  github.py  math_dollar.py  numpydoc.py
docs/tools/: apigen.py  buildmodref.py
fluctmatch/: __init__.py  cli.py  due.py  fluctmatch.py  version.py
src/fluctmatch/: __init__.py  __main__.py  cli.py
src/fluctmatch/commands/: __init__.py  align.py  average.py  cmd_align.py  cmd_convert.py  cmd_setup.py  combine.py  convert.py  initialize.py  setup.py  simulate.py  split.py
src/fluctmatch/core/: __init__.py  base.py  selection.py  utils.py
src/fluctmatch/core/models/: __init__.py  bioions.py  calpha.py  caside.py  dma.py  enm.py  generic.py  ncsc.py  noble.py  nucleic3.py  nucleic4.py  nucleic6.py  polar.py  solventions.py  tip3p.py  united.py  water.py
src/fluctmatch/fm/: __init__.py  base.py
src/fluctmatch/fm/charmm/: __init__.py  fluctmatch.py
src/fluctmatch/io/: __init__.py  base.py  charmm_parameter.py  charmm_stream.py
src/fluctmatch/io/charmm/: __init__.py  intcor.py  parameter.py  stream.py
src/fluctmatch/libs/: __init__.py  bond_info.py  intcor.py  logging.py  parameters.py  safe_format.py  utils.py  write_files.py  write_traj.py
src/fluctmatch/model/: __init__.py  base.py  bioions.py  calpha.py  caside.py  dma.py  enm.py  ncsc.py  nucleic3.py  nucleic4.py  polar.py  selection.py  solventions.py  tip3p.py  water.py
src/fluctmatch/parsers/: __init__.py  base.py
src/fluctmatch/parsers/parsers/: ICParser.py  PSFParser.py  __init__.py
src/fluctmatch/parsers/readers/: COR.py  PRM.py  __init__.py
src/fluctmatch/parsers/writers/: COR.py  IC.py  PRM.py  PSF.py  RTF.py  __init__.py  stream.py
src/fluctmatch/templates/: __init__.py
src/fluctmatch/templates/charmm/: __init__.py  cg_header.inp  fluctmatch.inp  thermodynamics.inp
tests/: __init__.py  conftest.py  datafile.py  test_fluctmatch.py  test_main.py
tests/commands/: __init__.py  test_align.py  test_average.py  test_combine.py  test_convert.py  test_initialize.py  test_setup.py  test_simulate.py  test_split.py
tests/data/: .trex1.xtc_offsets.npz  cg.crd  cg.json  cg.psf  cg.rtf  cg.xplor.psf  fluctmatch.average.ic  fluctmatch.crd  fluctmatch.dcd  fluctmatch.fluct.ic  fluctmatch.prm  fluctmatch.psf  setup.csv
tests/fm/: __init__.py
tests/fm/charmm/: __init__.py  test_fluctmatch.py
tests/io/: __init__.py  test_charmm_parameter.py  test_charmm_stream.py
tests/io/charmm/: __init__.py  test_intcor.py  test_parameter.py  test_stream.py
tests/libs/: __init__.py  test_bondinfo.py  test_logging.py  test_utils.py  test_write_files.py
tests/model/: __init__.py  test_enm.py  test_ions.py  test_nucleic.py  test_protein.py  test_selection.py  test_solvent.py
tests/models/: __init__.py  test_enm.py  test_generic.py  test_ions.py  test_nucleic.py  test_protein.py  test_selection.py  test_solvent.py  test_united.py  test_utils.py
tests/parsers/: __init__.py  test_cor.py  test_ic.py  test_prm.py  test_psf.py  test_rtf.py  test_stream.py
